--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -30,7 +30,8 @@
             "styles": [
               "src/styles.sass",
               "node_modules/bootstrap/scss/bootstrap.scss",
-              "node_modules/izitoast/dist/css/iziToast.min.css"
+              "node_modules/izitoast/dist/css/iziToast.min.css",
+              "node_modules/animate.css/animate.min.css"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
