--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/angular-fontawesome": "^0.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "animate.css": "^3.7.2",
     "bootstrap": "^4.3.1",
     "izitoast": "^1.4.0",
     "rxjs": "~6.4.0",
