--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,8 +24,10 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "animate.css": "^3.7.2",
     "bootstrap": "^4.3.1",
+    "crypto-js": "^3.1.9-1",
     "izitoast": "^1.4.0",
     "rxjs": "~6.4.0",
+    "secure-web-storage": "^1.0.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
