--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "animate.css": "^3.7.2",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.8.0",
     "crypto-js": "^3.1.9-1",
     "izitoast": "^1.4.0",
     "rxjs": "~6.4.0",
