--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -34,6 +34,8 @@
               "node_modules/animate.css/animate.min.css"
             ],
             "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/popper.js/dist/umd/popper.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "node_modules/izitoast/dist/js/iziToast.min.js"
             ]
@@ -73,7 +75,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Frontend:build"
+            "browserTarget": "Frontend:build",
+            "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "production": {
@@ -130,6 +133,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "Frontend"
 }
