--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -28,6 +28,7 @@
     "crypto-js": "^3.1.9-1",
     "izitoast": "^1.4.0",
     "jquery": "^3.4.1",
+    "ngx-socket-io": "^3.0.1",
     "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
     "secure-web-storage": "^1.0.2",
