--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,8 @@
     "@fortawesome/angular-fontawesome": "^0.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@types/jquery": "^3.3.31",
+    "angular-draggable-droppable": "^4.3.8",
     "animate.css": "^3.7.2",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
