--- a/Frontend/angular.json
+++ b/Frontend/angular.json
@@ -31,13 +31,13 @@
               "src/styles.sass",
               "node_modules/bootstrap/scss/bootstrap.scss",
               "node_modules/izitoast/dist/css/iziToast.min.css",
-              "node_modules/animate.css/animate.min.css"
+              "node_modules/animate.css/animate.min.css",
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/popper.js/dist/umd/popper.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "node_modules/izitoast/dist/js/iziToast.min.js"
+              "node_modules/izitoast/dist/js/iziToast.min.js",
             ]
           },
           "configurations": {
