--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cloudinary": "^1.16.0",
     "cors": "^2.8.5",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
