--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -35,6 +35,7 @@
     "rxjs": "~6.4.0",
     "secure-web-storage": "^1.0.2",
     "tslib": "^1.10.0",
+    "typescript-is": "^0.13.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
